--- a/src/components/atoms/InputText/InputText.scss
+++ b/src/components/atoms/InputText/InputText.scss
@@ -3,5 +3,6 @@
     width:100%;
     border:0 none;
     padding:10px 15px;
-    font-size:15px
+    font-size:15px;
+    box-sizing: border-box;
 }
