--- a/src/components/atoms/Button/Button.scss
+++ b/src/components/atoms/Button/Button.scss
@@ -3,3 +3,4 @@
 .BUTTON_RED{background-color:red}
 .BUTTON_YELLOW{background-color:yellow;color:#333}
 .BUTTON_DISABLED{background-color:#eee}
+.BUTTON_WHITE{background-color:#f5f5f5}
