--- a/src/components/atoms/SimpleButton/SimpleButton.scss
+++ b/src/components/atoms/SimpleButton/SimpleButton.scss
@@ -1,7 +1,9 @@
 .btn_normal{
     padding:10px 15px
 }
-.btn_white{
-    background-color:#fff;
-    padding:10px 15px
-}
+.btn_comm{width:100%;height:60px;background-color:#000;font-size:14px;font-weight:500;color:#fff;border-radius:5px;padding:10px 15px;box-sizing: border-box;}
+.btn_comm:hover{background-color:aqua}
+.BUTTON_RED{background-color:red}
+.BUTTON_YELLOW{background-color:yellow;color:#333}
+.BUTTON_DISABLED{background-color:#eee}
+.BUTTON_WHITE{background-color:#f5f5f5}
