--- a/src/components/atoms/SimpleButton/SimpleButton.scss
+++ b/src/components/atoms/SimpleButton/SimpleButton.scss
@@ -7,3 +7,4 @@
 .BUTTON_YELLOW{background-color:yellow;color:#333}
 .BUTTON_DISABLED{background-color:#eee}
 .BUTTON_WHITE{background-color:#f5f5f5}
+.BUTTON_GREY{background-color:#eee;color:#333}
