--- a/src/components/page/template/EditTemplate.scss
+++ b/src/components/page/template/EditTemplate.scss
@@ -1,17 +1,22 @@
 .EditTemplate{
     max-width: 740px;
+    min-width: 720px;
     margin:0 auto;
-    padding:0 10px;
+    padding:0 5px;
     box-sizing: border-box;
     .area_body{
         margin: 10px 0;
     }
     .area_button {
         margin-top:20px;
+        text-align:center;
         .btn_comm{
+            display:inline-block;
+            width: 48%;
             max-width:350px;
             margin:0 5px;
-            box-sizing:border-box
+            box-sizing:border-box;
+            vertical-align:top
         }
     }
     
