ADD validate in EditPage

--- a/src/components/molecule/InputInfo/InputInfo.scss
+++ b/src/components/molecule/InputInfo/InputInfo.scss
@@ -1,4 +1,9 @@
 .info_input{
     label{display:block;margin:10px 0}
-
+    .desc_error{
+        margin-top:5px;
+        font-size:12px;
+        line-height:14px;
+        color:#fc0000
+    }
 }
