SPIT validate code

--- a/src/components/molecule/SeachResult/SeachResult.scss
+++ b/src/components/molecule/SeachResult/SeachResult.scss
@@ -4,7 +4,11 @@
         strong{display:block}
         p{padding:1px 0 5px 10px}
         a{display: inline-block;padding:2px 10px;vertical-align:top;}
+        small{
+            display:block;
+        }
         padding:10px;
         border-bottom:1px solid #eee;
+
     }
 }
