--- a/src/components/molecule/SeachResult/SeachResult.scss
+++ b/src/components/molecule/SeachResult/SeachResult.scss
@@ -9,6 +9,7 @@
         }
         padding:10px;
         border-bottom:1px solid #eee;
-
+        transition: all 1s ease-in;
+        opacity: 1;
     }
 }
